# rsconnect-jupyter

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  NEWS.md  Pipfile  README.md  Vagrantfile  conftest.py  cypress.json  doc.Jenkinsfile  docker.sh  mock_connect.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: main.yml  snyk.yml
cypress/integration/: add_server_spec.js  end_to_end_spec.js
docs/: .gitignore  Dockerfile  README.md  build-doc.sh  justfile  mkdocs.yml  requirements.txt  state.dot  state.html
docs/docs/: NEWS.md  additional-info.md  additional.md  collaboration.md  index.md  separator.md  uninstalling.md  upgrading.md  usage.md
docs/docs/css/: custom.css  external-links.css  superfences-tabs.css
docs/docs/js/: custom.js
docs/docs/snippets/: install.md  python_pkg.md  uninstall.md
docs/guide/: README.md  style.css
docs/overrides/partials/: footer.html  header.html  nav.html  toc.html
docs/v0.1.0/: index.html  index.md
examples/jupyterhub/: Dockerfile  justfile
jupyter-config/jupyter_notebook_config.d/: rsconnect_jupyter.json
jupyter-config/nbconfig/notebook.d/: rsconnect_jupyter.json
mock-connect/: Dockerfile
rsconnect/: __init__.py  api.py  bundle.py  environment.py  rsconnect.py
rsconnect/scripts/: jupyter_setup.sh  versions
rsconnect/static/: connect.js  index.js  main.css
rsconnect/tests/: test_bundle.py  test_environment.py
rsconnect_jupyter/: __init__.py  api.py  bundle.py  environment.py  managers.py
rsconnect_jupyter/static/: .eslintrc.yml  connect.js  index.js  main.css  rsconnect.js
rsconnect_jupyter/static/nbextension/: package.json
rsconnect_jupyter/static/package/: package.json  (+1 more)
rsconnect_jupyter/tests/: test_bundle.py  test_environment.py  test_integration.py
scripts/: wait-for-healthy-container
selenium/: .gitignore  Makefile  README.md  conftest.py  pytest.ini  wait_for_systems_up.sh
selenium/data/: spiro.ipynb
selenium/t/: test_add_server.py  test_publish_source.py  test_publish_static.py  test_republish.py  test_stub.py  test_switch_mode.py
tests/: test_managers.py  test_rsconnect_jupyter.py
tools/vagrant/: provision-win10.ps1
tools/yarn/: Dockerfile
(+28 files in other folders)
