[bdist_wheel]
universal = 1

[metadata]
author = Jonathan Curran
author_email = jonathan.curran@rstudio.com
description = Jupyter Notebook integration with RStudio Connect
license = GPL-2.0
license_file = LICENSE.md
long_description = file:README.md
long_description_content_type = text/markdown
name = rsconnect_jupyter
url = http://github.com/rstudio/rsconnect-jupyter
project_urls =
    Documentation = https://docs.rstudio.com/rsconnect-jupyter

[options]
install_requires =
    rsconnect-python>=1.5.0b2
    notebook
    nbformat
    nbconvert>=5.0
    six
    ipython
setup_requires =
    setuptools
packages = rsconnect_jupyter
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
include_package_data = true
zip_safe = false
