[bdist_wheel]
universal = 1

[metadata]
author = Jonathan Curran
author_email = jonathan.curran@posit.co
description = Jupyter Notebook integration with Posit Connect
license = GPL-2.0
license_file = LICENSE.md
long_description = file:README.md
long_description_content_type = text/markdown
name = rsconnect_jupyter
url = http://github.com/rstudio/rsconnect-jupyter
project_urls =
    Documentation = https://docs.posit.co/rsconnect-jupyter

[options]
install_requires =
    rsconnect-python>=1.15.0
    notebook>=6.1.5,<7.0.0
    nbformat
    nbconvert>=5.6.1
    six
    ipython
setup_requires =
    setuptools
packages = rsconnect_jupyter
python_requires = >=3.8
include_package_data = true
zip_safe = false

[options.extras_require]
test =
    black
    pytest
